--- a/icloud/pom.xml
+++ b/icloud/pom.xml
@@ -15,7 +15,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.4.RELEASE</version>
+		<version>1.5.15.RELEASE</version>
 	</parent>
 
 	<!-- 阿里云maven仓库 -->
@@ -47,12 +47,14 @@
 		<java.version>1.8</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<dubbo.version>2.8.4</dubbo.version>
+		<druid.version>1.1.6</druid.version>
 		<curator-framework.version>1.3.3</curator-framework.version>
 		<zookeeper.version>3.5.4-beta</zookeeper.version>
 		<zkclient.version>0.1</zkclient.version>
 		<jwt.version>0.9.1</jwt.version>
 		<commons-lang3.version>3.7</commons-lang3.version>
 		<commons-io.version>2.6</commons-io.version>
+		<commons-beanutils.version>1.9.3</commons-beanutils.version>
 		<commons-codec.version>1.11</commons-codec.version>
 		<commons-fileupload.version>1.3.3</commons-fileupload.version>
 		<guava.version>26.0-jre</guava.version>
@@ -69,6 +71,9 @@
 		<thumbnailator.version>0.4.8</thumbnailator.version>
 		<pinyin4j.version>2.5.1</pinyin4j.version>
 		<webmagic.version>0.7.3</webmagic.version>
+		<apache.version>4.5.3</apache.version>
+		<mysql.version>8.0.12</mysql.version>
+		<dubbo-spring-boot>1.0.0</dubbo-spring-boot>
 	</properties>
 
 	<dependencyManagement>
@@ -126,6 +131,12 @@
 				<version>${commons-io.version}</version>
 			</dependency>
 			<dependency>
+			    <groupId>commons-beanutils</groupId>
+			    <artifactId>commons-beanutils</artifactId>
+			    <version>${commons-beanutils.version}</version>
+			</dependency>
+			
+			<dependency>
 				<groupId>commons-codec</groupId>
 				<artifactId>commons-codec</artifactId>
 				<version>${commons-codec.version}</version>
@@ -145,18 +156,22 @@
 				<artifactId>fastjson</artifactId>
 				<version>${fastjson.version}</version>
 			</dependency>
-
+	        <dependency>
+	            <groupId>mysql</groupId>
+	            <artifactId>mysql-connector-java</artifactId>
+	            <version>${mysql.version}</version>
+	        </dependency>
 			<dependency>
 				<groupId>com.squareup.okhttp3</groupId>
 				<artifactId>okhttp</artifactId>
 				<version>${okhttp.version}</version>
 			</dependency>
 
-			<dependency>
-				<groupId>org.hibernate</groupId>
-				<artifactId>hibernate-validator</artifactId>
-				<version>${validator.version}</version>
-			</dependency>
+<!-- 			<dependency> -->
+<!-- 				<groupId>org.hibernate</groupId> -->
+<!-- 				<artifactId>hibernate-validator</artifactId> -->
+<!-- 				<version>${validator.version}</version> -->
+<!-- 			</dependency> -->
 
 			<dependency>
 				<groupId>net.sf.ehcache</groupId>
@@ -200,12 +215,30 @@
 				<artifactId>pinyin4j</artifactId>
 				<version>${pinyin4j.version}</version>
 			</dependency>
-
+<!-- 			<dependency> -->
+<!-- 				<groupId>org.springframework.boot</groupId> -->
+<!-- 				<artifactId>spring-boot-starter-tomcat</artifactId> -->
+<!-- 				<scope>provided</scope> -->
+<!-- 			</dependency> -->
+<!-- 			<dependency> -->
+<!-- 				<groupId>org.springframework.boot</groupId> -->
+<!-- 				<artifactId>spring-boot-starter-freemarker</artifactId> -->
+<!-- 			</dependency> -->
+			<dependency>
+				<groupId>io.dubbo.springboot</groupId>
+				<artifactId>spring-boot-starter-dubbo</artifactId>
+				<version>${dubbo-spring-boot}</version>
+			</dependency>
 			<dependency>
 				<groupId>org.mybatis.spring.boot</groupId>
 				<artifactId>mybatis-spring-boot-starter</artifactId>
 				<version>${mybatis-starter.version}</version>
 			</dependency>
+			<dependency>
+	            <groupId>com.alibaba</groupId>
+	            <artifactId>druid-spring-boot-starter</artifactId>
+	            <version>${druid.version}</version>
+	        </dependency>
 			<dependency>
 				<groupId>com.alibaba</groupId>
 				<artifactId>druid</artifactId>
@@ -216,7 +249,11 @@
 				<artifactId>pagehelper</artifactId>
 				<version>${pagehelper.version}</version>
 			</dependency>
-
+	        <dependency>
+			  <groupId>org.apache.httpcomponents</groupId>
+			  <artifactId>httpclient</artifactId>
+			  <version>${apache.version}</version>
+			</dependency>
 			<dependency>
 				<groupId>us.codecraft</groupId>
 				<artifactId>webmagic-core</artifactId>
@@ -231,25 +268,26 @@
 	</dependencyManagement>
 
 	<build>
-		<resources>
-			<resource>
-				<directory>${basedir}/src/main/resources</directory>
-				<filtering>true</filtering>
-				<includes>
-					<include>**/application*.yml</include>
-					<include>**/*.properties</include>
-					<include>**/*.xml</include>
-				</includes>
-			</resource>
-			<resource>
-				<directory>${basedir}/src/main/resources</directory>
-				<excludes>
-					<exclude>**/application*.yml</exclude>
-					<exclude>**/*.properties</exclude>
-					<exclude>**/*.xml</exclude>
-				</excludes>
-			</resource>
-		</resources>
+		<finalName>${project.artifactId}</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+                    <execution>
+                        <phase>none</phase>
+                    </execution>
+                </executions>
+			</plugin>
+			<!-- 跳过单元测试 -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<skipTests>true</skipTests>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 
 	<developers>
