--- a/icloud/icloud-system/icloud-system-provider/pom.xml
+++ b/icloud/icloud-system/icloud-system-provider/pom.xml
@@ -16,7 +16,6 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<start-class>com.cn.system.provider.SysProviderApplication</start-class>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -44,11 +43,7 @@
             <artifactId>icloud-system-api</artifactId>
             <version>${project.version}</version>
         </dependency>
-        <dependency>
-			<groupId>io.dubbo.springboot</groupId>
-			<artifactId>spring-boot-starter-dubbo</artifactId>
-		</dependency>
-        <dependency>
+       <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
@@ -84,6 +79,11 @@
             <groupId>us.codecraft</groupId>
             <artifactId>webmagic-extension</artifactId>
         </dependency>
+        <!-- 热部署 -->
+<!--         <dependency> -->
+<!-- 		    <groupId>org.springframework.boot</groupId> -->
+<!-- 		    <artifactId>spring-boot-devtools</artifactId> -->
+<!-- 		</dependency> -->
 	</dependencies>
 	
 	<build>
