--- a/icloud/icloud-system/icloud-system-provider/src/main/resources/application.yml
+++ b/icloud/icloud-system/icloud-system-provider/src/main/resources/application.yml
@@ -1,15 +1,11 @@
-# Tomcat
-server:
-    tomcat:
-        uri-encoding: UTF-8
-        max-threads: 1000
-        min-spare-threads: 30
-    port: 7070
-    servlet:
-      context-path: /provider-system
-
-# mysql
-spring:
+spring: 
+    dubbo: 
+        application :   
+            name : provider-system
+        registry :  
+            address : zookeeper://192.168.73.134:2181  
+        scan: com.cn.system.api.service
+        
     #解决tomcat同时部署两个SpringBoot应用提示InstanceAlreadyExistsException
     jmx:
         default-domain: admin
@@ -41,23 +37,11 @@ spring:
     freemarker:
       suffix: .html
       request-context-attribute: request
-
-    dubbo :  
-        application :   
-            name : hello-world-app
-        registry :  
-            address : zookeeper://192.168.73.134:2181  
-        scan: com.cn.system.api.service
-#    dubbo:
-#      application:            #应用配置，用于配置当前应用信息，不管该应用是提供者还是消费者。
-#        name: system
-#      registry:                 #注册中心配置，用于配置连接注册中心相关信息。
-#        address: zookeeper://192.168.73.134:2181
-#      protocol:     #协议配置，用于配置提供服务的协议信息，协议由提供方指定，消费方被动接受。
-#        name: dubbo
-#        port: 20880
-#      scan: com.cn.system.api.service.ISystemService  #服务暴露与发现消费所在的package
-
+     
+#    devtools:
+#      restart:
+#        enabled: true
+#        exclude: WEB-INF/**
 icloud:
     redis:
         open: false  # 是否开启redis缓存  true开启   false关闭
@@ -93,6 +77,7 @@ mybatis-plus:
     map-underscore-to-camel-case: true
     cache-enabled: false
     call-setters-on-nulls: true
+    
 #logging
 logging:
    config: classpath:logback-spring.xml
