--- a/icloud/pom.xml
+++ b/icloud/pom.xml
@@ -58,7 +58,7 @@
 		<commons-codec.version>1.11</commons-codec.version>
 		<commons-fileupload.version>1.3.3</commons-fileupload.version>
 		<guava.version>26.0-jre</guava.version>
-		<springfox.version>2.9.2</springfox.version>
+		<springfox.version>2.7.0</springfox.version>
 		<fastjson.version>1.2.49</fastjson.version>
 		<okhttp.version>3.11.0</okhttp.version>
 		<validator.version>6.0.12.Final</validator.version>
@@ -73,7 +73,9 @@
 		<webmagic.version>0.7.3</webmagic.version>
 		<apache.version>4.5.3</apache.version>
 		<mysql.version>8.0.12</mysql.version>
+		<mybatisplus.version>2.3</mybatisplus.version>
 		<dubbo-spring-boot>1.0.0</dubbo-spring-boot>
+		<devtools.version>1.5.15.RELEASE</devtools.version>
 	</properties>
 
 	<dependencyManagement>
@@ -160,6 +162,11 @@
 	            <groupId>mysql</groupId>
 	            <artifactId>mysql-connector-java</artifactId>
 	            <version>${mysql.version}</version>
+	        </dependency>
+	        <dependency>
+	            <groupId>com.baomidou</groupId>
+	            <artifactId>mybatis-plus</artifactId>
+	            <version>${mybatisplus.version}</version>
 	        </dependency>
 			<dependency>
 				<groupId>com.squareup.okhttp3</groupId>
@@ -263,6 +270,11 @@
 				<groupId>us.codecraft</groupId>
 				<artifactId>webmagic-extension</artifactId>
 				<version>${webmagic.version}</version>
+			</dependency>
+			<dependency>
+			    <groupId>org.springframework.boot</groupId>
+			    <artifactId>spring-boot-devtools</artifactId>
+			    <version>${devtools.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
