--- a/icloud/icloud-common/icloud-common-api/pom.xml
+++ b/icloud/icloud-common/icloud-common-api/pom.xml
@@ -24,10 +24,11 @@
             <artifactId>icloud-common-base</artifactId>
             <version>${project.version}</version>
         </dependency>
-       	<dependency>
-		    <groupId>com.github.pagehelper</groupId>
-		    <artifactId>pagehelper</artifactId>
-		</dependency>
+        
+<!--        	<dependency> -->
+<!-- 		    <groupId>com.github.pagehelper</groupId> -->
+<!-- 		    <artifactId>pagehelper</artifactId> -->
+<!-- 		</dependency> -->
         
 	</dependencies>
 </project>
