--- a/icloud/icloud-common/icloud-common-base/pom.xml
+++ b/icloud/icloud-common/icloud-common-base/pom.xml
@@ -17,83 +17,45 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <dependencies>
-    <!-- aspectj -->
-	<dependency>
-	    <groupId>org.aspectj</groupId>
-	    <artifactId>aspectjweaver</artifactId>
-	</dependency>
+<!-- 	<dependency> -->
+<!-- 	    <groupId>org.apache.commons</groupId> -->
+<!-- 	    <artifactId>commons-lang3</artifactId> -->
+<!-- 	</dependency> -->
+<!-- 	<dependency> -->
+<!-- 	    <groupId>commons-io</groupId> -->
+<!-- 	    <artifactId>commons-io</artifactId> -->
+<!-- 	</dependency> -->
+<!-- 	<dependency> -->
+<!-- 	    <groupId>commons-codec</groupId> -->
+<!-- 	    <artifactId>commons-codec</artifactId> -->
+<!-- 	</dependency> -->
 	
-	<dependency>
-	    <groupId>org.apache.commons</groupId>
-	    <artifactId>commons-lang3</artifactId>
-	</dependency>
-	<dependency>
-	    <groupId>commons-io</groupId>
-	    <artifactId>commons-io</artifactId>
-	</dependency>
-	<dependency>
-	    <groupId>commons-codec</groupId>
-	    <artifactId>commons-codec</artifactId>
-	</dependency>
-	<dependency>
-	    <groupId>commons-fileupload</groupId>
-	    <artifactId>commons-fileupload</artifactId>
-	    <exclusions>
-	        <exclusion>
-	            <artifactId>commons-io</artifactId>
-	            <groupId>commons-io</groupId>
-	        </exclusion>
-	    </exclusions>
-	</dependency>
-	<dependency>
-	    <groupId>commons-beanutils</groupId>
-	    <artifactId>commons-beanutils</artifactId>
-	    <exclusions>
-	        <exclusion>
-	            <groupId>commons-logging</groupId>
-	            <artifactId>commons-logging</artifactId>
-	        </exclusion>
-	    </exclusions>
-	</dependency>
-	<dependency>
-	    <groupId>com.google.guava</groupId>
-	    <artifactId>guava</artifactId>
-	</dependency>
-	<dependency>
-	    <groupId>com.google.code.gson</groupId>
-	    <artifactId>gson</artifactId>
-	</dependency>
-	<dependency>
-	    <groupId>com.alibaba</groupId>
-	    <artifactId>fastjson</artifactId>
-	</dependency>
+<!-- 	<dependency> -->
+<!-- 	    <groupId>com.alibaba</groupId> -->
+<!-- 	    <artifactId>fastjson</artifactId> -->
+<!-- 	</dependency> -->
 	
-	<dependency>
-	    <groupId>com.squareup.okhttp3</groupId>
-	    <artifactId>okhttp</artifactId>
-	</dependency>
-	
-	<dependency>
-	    <groupId>org.hibernate</groupId>
-	    <artifactId>hibernate-validator</artifactId>
-	</dependency>
-	
-	<dependency>
-	    <groupId>com.belerweb</groupId>
-	    <artifactId>pinyin4j</artifactId>
-	</dependency>
+<!-- 	<dependency> -->
+<!-- 	    <groupId>org.hibernate</groupId> -->
+<!-- 	    <artifactId>hibernate-validator</artifactId> -->
+<!-- 	</dependency> -->
 	
 	<!-- jackson json -->
-	<dependency>
-	    <groupId>com.fasterxml.jackson.core</groupId>
-	    <artifactId>jackson-databind</artifactId>
-	</dependency>
+<!-- 	<dependency> -->
+<!-- 	    <groupId>com.fasterxml.jackson.core</groupId> -->
+<!-- 	    <artifactId>jackson-databind</artifactId> -->
+<!-- 	</dependency> -->
 	
-	<dependency>
-	    <groupId>javax.servlet</groupId>
-	    <artifactId>javax.servlet-api</artifactId>
-	    <scope>provided</scope>
-	</dependency>
+<!-- 	<dependency> -->
+<!-- 	    <groupId>javax.servlet</groupId> -->
+<!-- 	    <artifactId>javax.servlet-api</artifactId> -->
+<!-- 	    <scope>provided</scope> -->
+<!-- 	</dependency> -->
+	
+<!-- 	<dependency> -->
+<!-- 	    <groupId>org.javassist</groupId> -->
+<!-- 	    <artifactId>javassist</artifactId> -->
+<!-- 	</dependency> -->
 	
 	<!-- 日志文件管理包 -->
 	<!-- log start -->
@@ -104,16 +66,6 @@
 	<dependency>
 	    <groupId>ch.qos.logback</groupId>
 	    <artifactId>logback-access</artifactId>
-	</dependency>
-	
-	<!-- 条形码、二维码生成  -->
-	<dependency>
-	    <groupId>com.google.zxing</groupId>
-	    <artifactId>core</artifactId>
-	</dependency>
-	<dependency>
-	    <groupId>com.google.zxing</groupId>
-	    <artifactId>javase</artifactId>
 	</dependency>
   </dependencies>
 </project>
