--- a/icloud/pom.xml
+++ b/icloud/pom.xml
@@ -44,84 +44,26 @@
     </pluginRepositories>
 
 	<properties>
-		<java.version>1.8</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<dubbo.version>2.8.4</dubbo.version>
-		<druid.version>1.1.6</druid.version>
-		<curator-framework.version>1.3.3</curator-framework.version>
-		<zookeeper.version>3.5.4-beta</zookeeper.version>
-		<zkclient.version>0.1</zkclient.version>
-		<jwt.version>0.9.1</jwt.version>
+		<java.version>1.8</java.version>
 		<commons-lang3.version>3.7</commons-lang3.version>
 		<commons-io.version>2.6</commons-io.version>
 		<commons-beanutils.version>1.9.3</commons-beanutils.version>
 		<commons-codec.version>1.11</commons-codec.version>
 		<commons-fileupload.version>1.3.3</commons-fileupload.version>
-		<guava.version>26.0-jre</guava.version>
 		<springfox.version>2.7.0</springfox.version>
 		<fastjson.version>1.2.49</fastjson.version>
-		<okhttp.version>3.11.0</okhttp.version>
-		<validator.version>6.0.12.Final</validator.version>
-		<ehcache-core.version>2.6.11</ehcache-core.version>
-		<zxing.version>3.3.3</zxing.version>
-		<mybatis-starter.version>1.3.2</mybatis-starter.version>
 		<druid.version>1.1.10</druid.version>
-		<aliyun.oss.version>3.1.0</aliyun.oss.version>
-		<pagehelper.version>5.1.4</pagehelper.version>
-		<thumbnailator.version>0.4.8</thumbnailator.version>
-		<pinyin4j.version>2.5.1</pinyin4j.version>
-		<webmagic.version>0.7.3</webmagic.version>
-		<apache.version>4.5.3</apache.version>
 		<mysql.version>8.0.12</mysql.version>
 		<mybatisplus.version>2.3</mybatisplus.version>
 		<dubbo-spring-boot>1.0.0</dubbo-spring-boot>
-		<devtools.version>1.5.15.RELEASE</devtools.version>
+		<mybatis-starter.version>1.3.2</mybatis-starter.version>
+		<autoconfigure.version>1.5.15.RELEASE</autoconfigure.version>
 	</properties>
 
 	<dependencyManagement>
 		<dependencies>
-			<dependency>
-				<groupId>org.aspectj</groupId>
-				<artifactId>aspectjrt</artifactId>
-				<version>${aspectj.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.aspectj</groupId>
-				<artifactId>aspectjweaver</artifactId>
-				<version>${aspectj.version}</version>
-			</dependency>
-
-			<!-- dubbox -->
-			<dependency>
-				<groupId>com.alibaba</groupId>
-				<artifactId>dubbo</artifactId>
-				<version>${dubbo.version}</version>
-			</dependency>
-
-			<!-- zookeeper start -->
-			<dependency>
-				<groupId>com.netflix.curator</groupId>
-				<artifactId>curator-framework</artifactId>
-				<version>${curator-framework.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.zookeeper</groupId>
-				<artifactId>zookeeper</artifactId>
-				<version>${zookeeper.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.github.sgroschupf</groupId>
-				<artifactId>zkclient</artifactId>
-				<version>${zkclient.version}</version>
-			</dependency>
-			<!-- zookeeper end -->
-
-			<dependency>
-				<groupId>io.jsonwebtoken</groupId>
-				<artifactId>jjwt</artifactId>
-				<version>${jwt.version}</version>
-			</dependency>
-
+			<!-- commons -->
 			<dependency>
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-lang3</artifactId>
@@ -137,21 +79,10 @@
 			    <artifactId>commons-beanutils</artifactId>
 			    <version>${commons-beanutils.version}</version>
 			</dependency>
-			
 			<dependency>
 				<groupId>commons-codec</groupId>
 				<artifactId>commons-codec</artifactId>
 				<version>${commons-codec.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>commons-fileupload</groupId>
-				<artifactId>commons-fileupload</artifactId>
-				<version>${commons-fileupload.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.google.guava</groupId>
-				<artifactId>guava</artifactId>
-				<version>${guava.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.alibaba</groupId>
@@ -168,69 +99,8 @@
 	            <artifactId>mybatis-plus</artifactId>
 	            <version>${mybatisplus.version}</version>
 	        </dependency>
-			<dependency>
-				<groupId>com.squareup.okhttp3</groupId>
-				<artifactId>okhttp</artifactId>
-				<version>${okhttp.version}</version>
-			</dependency>
-
-<!-- 			<dependency> -->
-<!-- 				<groupId>org.hibernate</groupId> -->
-<!-- 				<artifactId>hibernate-validator</artifactId> -->
-<!-- 				<version>${validator.version}</version> -->
-<!-- 			</dependency> -->
-
-			<dependency>
-				<groupId>net.sf.ehcache</groupId>
-				<artifactId>ehcache-core</artifactId>
-				<version>${ehcache-core.version}</version>
-			</dependency>
-
-			<!-- Swagger -->
-			<dependency>
-				<groupId>io.springfox</groupId>
-				<artifactId>springfox-swagger2</artifactId>
-				<version>${springfox.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>io.springfox</groupId>
-				<artifactId>springfox-swagger-ui</artifactId>
-				<version>${springfox.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>com.aliyun.oss</groupId>
-				<artifactId>aliyun-sdk-oss</artifactId>
-				<version>${aliyun.oss.version}</version>
-			</dependency>
-
-			<!-- 条形码、二维码生成 -->
-			<dependency>
-				<groupId>com.google.zxing</groupId>
-				<artifactId>core</artifactId>
-				<version>${zxing.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.google.zxing</groupId>
-				<artifactId>javase</artifactId>
-				<version>${zxing.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>com.belerweb</groupId>
-				<artifactId>pinyin4j</artifactId>
-				<version>${pinyin4j.version}</version>
-			</dependency>
-<!-- 			<dependency> -->
-<!-- 				<groupId>org.springframework.boot</groupId> -->
-<!-- 				<artifactId>spring-boot-starter-tomcat</artifactId> -->
-<!-- 				<scope>provided</scope> -->
-<!-- 			</dependency> -->
-<!-- 			<dependency> -->
-<!-- 				<groupId>org.springframework.boot</groupId> -->
-<!-- 				<artifactId>spring-boot-starter-freemarker</artifactId> -->
-<!-- 			</dependency> -->
+	        
+			<!-- spring-boot-starter -->
 			<dependency>
 				<groupId>io.dubbo.springboot</groupId>
 				<artifactId>spring-boot-starter-dubbo</artifactId>
@@ -246,36 +116,26 @@
 	            <artifactId>druid-spring-boot-starter</artifactId>
 	            <version>${druid.version}</version>
 	        </dependency>
-			<dependency>
-				<groupId>com.alibaba</groupId>
-				<artifactId>druid</artifactId>
-				<version>${druid.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.github.pagehelper</groupId>
-				<artifactId>pagehelper</artifactId>
-				<version>${pagehelper.version}</version>
-			</dependency>
+	        
 	        <dependency>
-			  <groupId>org.apache.httpcomponents</groupId>
-			  <artifactId>httpclient</artifactId>
-			  <version>${apache.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>us.codecraft</groupId>
-				<artifactId>webmagic-core</artifactId>
-				<version>${webmagic.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>us.codecraft</groupId>
-				<artifactId>webmagic-extension</artifactId>
-				<version>${webmagic.version}</version>
-			</dependency>
-			<dependency>
 			    <groupId>org.springframework.boot</groupId>
-			    <artifactId>spring-boot-devtools</artifactId>
-			    <version>${devtools.version}</version>
+			    <artifactId>spring-boot-autoconfigure</artifactId>
+			    <version>${autoconfigure.version}</version>
 			</dependency>
+			
+			<!-- Swagger -->
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-swagger2</artifactId>
+				<version>${springfox.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-swagger-ui</artifactId>
+				<version>${springfox.version}</version>
+			</dependency>
+	        
 		</dependencies>
 	</dependencyManagement>
 
@@ -301,25 +161,6 @@
 			</plugin>
 		</plugins>
 	</build>
-
-	<developers>
-		<developer>
-			<name>MaYunKun</name>
-			<id>MaYunKun</id>
-			<email>mayunkunwork@163.com</email>
-			<roles>
-				<role>Developer</role>
-			</roles>
-			<timezone>+8</timezone>
-		</developer>
-	</developers>
-
-	<distributionManagement>
-		<site>
-			<id>website</id>
-			<url>scp://webhost.company.com/www/website</url>
-		</site>
-	</distributionManagement>
 
 	<modules>
 		<module>icloud-common</module>
